test: create test scenarios
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>