@@ -14,8 +14,8 @@
  */
 package org.eclipse.jnosql.mapping.graph.spi;
 
+import jakarta.nosql.Template;
 import org.apache.tinkerpop.gremlin.structure.Graph;
-import org.eclipse.jnosql.communication.graph.GraphDatabaseManager;
 import org.eclipse.jnosql.mapping.DatabaseQualifier;
 import org.eclipse.jnosql.mapping.DatabaseType;
 import org.eclipse.jnosql.mapping.graph.GraphTemplate;
@@ -30,7 +30,7 @@ import java.util.Set;
 
 class TemplateBean extends AbstractBean<GraphTemplate> {
 
-    private static final Set<Type> TYPES = Collections.singleton(GraphTemplate.class);
+    private static final Set<Type> TYPES = Set.of(GraphTemplate.class, Template.class);
 
     private final String provider;
 
@@ -56,8 +56,8 @@ class TemplateBean extends AbstractBean<GraphTemplate> {
     public GraphTemplate create(CreationalContext<GraphTemplate> context) {
 
         GraphTemplateProducer producer = getInstance(GraphTemplateProducer.class);
-        Graph manager = getGraph();
-        return producer.apply(GraphDatabaseManager.of(manager));
+        Graph graph = getGraph();
+        return producer.apply(graph);
     }
 
     private Graph getGraph() {
